...
          null,
        ),
        (
          Icons.receipt_long_outlined,
          Icons.receipt_long,
          AppStrings.tabOrders,
          'nav-orders',
          'nav-orders-active',
        ),
        (
          Icons.inventory_2_outlined,
          Icons.inventory_2,
          AppStrings.tabCatalog,
...
